Fixed resizing issue on mobile

--- a/css/app.css
+++ b/css/app.css
@@ -3,12 +3,12 @@
     top: 30px;
     left: 0;
     width: 100%;
-    height: 100%;
+    /*height: 100vh;*/
 }
 #bg img {
     display: block;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     object-fit: cover;
     object-position: center 20%;
 }
